refactor: simplify diff some more